--- a/src/Smartstore.Web/Views/Shared/Components/OrderTotals/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/OrderTotals/Default.cshtml
@@ -15,8 +15,8 @@
         </td>
     </tr>
     <tr id="CartSummarySubtotal" class="cart-summary-subtotal"
-        data-subtotal-converted="@(Model.SubTotal.Amount.FormatInvariant())"
-        data-subtotal="@(Model?.CartSubtotal?.SubtotalWithoutDiscount.Amount.FormatInvariant())">
+        data-subtotal-converted="@RoundingHelper.Round(Model.SubTotal).ToStringInvariant()"
+        data-subtotal="@(Model.CartSubtotal != null ? RoundingHelper.Round(Model.CartSubtotal.SubtotalWithoutDiscount).ToStringInvariant() : string.Empty)">
         <td class="cart-summary-label">@T("ShoppingCart.Totals.SubTotal"):</td>
         <td class="cart-summary-value">@Model.SubTotal</td>
     </tr>
@@ -141,10 +141,10 @@
             <span>@Model.OrderTotalRounding</span>
         </td>
     </tr>
-
+    
     <tr id="CartSummaryTotal" class="cart-summary-total" 
-        data-total-converted="@((Model.OrderTotal ?? Money.Zero).Amount.FormatInvariant())"
-        data-total="@((Model.CartTotal?.Total ?? Money.Zero).Amount.FormatInvariant())">
+        data-total-converted="@RoundingHelper.Round(Model.OrderTotal ?? Money.Zero).ToStringInvariant()"
+        data-total="@RoundingHelper.Round(Model.CartTotal?.Total ?? Money.Zero).ToStringInvariant()">
         <td class="cart-summary-label">@T("ShoppingCart.Totals.OrderTotal"):</td>
         <td class="cart-summary-value">
             @if (Model.OrderTotal != null)
