--- a/src/Smartstore.Web/Areas/Admin/Views/Currency/_CreateOrUpdate.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Currency/_CreateOrUpdate.cshtml
@@ -91,7 +91,7 @@
                     <smart-label asp-for="DomainEndings" />
                 </div>
                 <div class="adminData">
-                    <select asp-for="DomainEndingsArray" asp-items="Model.AvailableDomainEndings" multiple="multiple" data-tags="true"></select>
+                    <select asp-for="DomainEndingsArray" asp-items="ViewBag.AvailableDomainEndings" multiple="multiple" data-tags="true"></select>
                     <span asp-validation-for="DomainEndings"></span>
                 </div>
             </div>
@@ -169,11 +169,45 @@
             </div>
             <div class="adminRow">
                 <div class="adminTitle">
+                    <smart-label asp-for="MidpointRounding" />
+                </div>
+                <div class="adminData">
+                    <select asp-for="MidpointRounding">
+                        @foreach (var item in (List<ExtendedSelectListItem>)ViewBag.MidpointRoundings)
+                        {
+                            <option value="@item.Value" attr-selected='(item.Selected, "selected")' data-description="@(item.Get<string>("Description"))">@item.Text</option>
+                        }
+                    </select>
+                    <span asp-validation-for="MidpointRounding"></span>
+                </div>
+            </div>
+            <div class="adminRow">
+                <div class="adminTitle">
                     <smart-label asp-for="RoundOrderItemsEnabled" />
                 </div>
                 <div class="adminData">
-                    <input asp-for="RoundOrderItemsEnabled" />
+                    <editor asp-for="RoundOrderItemsEnabled" />
                     <span asp-validation-for="RoundOrderItemsEnabled"></span>
+                </div>
+            </div>
+            <div id="round-order-items">
+                <div class="adminRow">
+                    <div class="adminTitle">
+                        <smart-label asp-for="RoundNetPrices" />
+                    </div>
+                    <div class="adminData">
+                        <editor asp-for="RoundNetPrices" />
+                        <span asp-validation-for="RoundNetPrices"></span>
+                    </div>
+                </div>
+                <div class="adminRow">
+                    <div class="adminTitle">
+                        <smart-label asp-for="RoundUnitPrices" />
+                    </div>
+                    <div class="adminData">
+                        <editor asp-for="RoundUnitPrices" />
+                        <span asp-validation-for="RoundUnitPrices"></span>
+                    </div>
                 </div>
             </div>
             <div class="adminRow">
@@ -181,45 +215,47 @@
                     <smart-label asp-for="RoundOrderTotalEnabled" />
                 </div>
                 <div class="adminData">
-                    <input asp-for="RoundOrderTotalEnabled" />
+                    <input asp-for="RoundOrderTotalEnabled" data-toggler-for="#round-order-total" />
                     <span asp-validation-for="RoundOrderTotalEnabled"></span>
                 </div>
             </div>
-            <div class="adminRow round-order-total">
-                <div class="adminTitle">
-                    <smart-label asp-for="RoundOrderTotalDenominator" />
+            <div id="round-order-total">
+                <div class="adminRow">
+                    <div class="adminTitle">
+                        <smart-label asp-for="RoundOrderTotalDenominator" />
+                    </div>
+                    <div class="adminData">
+                        <select asp-for="RoundOrderTotalDenominator" asp-items="roundOrderTotalDenominators" class="autowidth" style="width: 150px"></select>
+                        <span asp-validation-for="RoundOrderTotalDenominator"></span>
+                    </div>
                 </div>
-                <div class="adminData">
-                    <select asp-for="RoundOrderTotalDenominator" asp-items="roundOrderTotalDenominators" class="autowidth" style="width: 150px"></select>
-                    <span asp-validation-for="RoundOrderTotalDenominator"></span>
+                <div class="adminRow">
+                    <div class="adminTitle">
+                        <smart-label asp-for="RoundOrderTotalRule" />
+                    </div>
+                    <div class="adminData">
+                        <select asp-for="RoundOrderTotalRule" asp-items="Model.RoundOrderTotalRule.ToSelectList()"></select>
+                        <span asp-validation-for="RoundOrderTotalRule"></span>
+                    </div>
                 </div>
-            </div>
-            <div class="adminRow round-order-total">
-                <div class="adminTitle">
-                    <smart-label asp-for="RoundOrderTotalRule" />
-                </div>
-                <div class="adminData">
-                    <select asp-for="RoundOrderTotalRule" asp-items="Model.RoundOrderTotalRule.ToSelectList()"></select>
-                    <span asp-validation-for="RoundOrderTotalRule"></span>
-                </div>
-            </div>
-            <div class="adminRow round-order-total">
-                <div class="adminTitle">
-                </div>
-                <div class="adminData">
-                    @if (Model.RoundOrderTotalPaymentMethods.Any())
-                    {
-                        <div class="alert alert-info">
-                            <span>@T("Admin.Configuration.Currencies.PaymentMethodsEnabledRoundingList"):</span>
-                            @Html.Raw(string.Join(" · ", Model.RoundOrderTotalPaymentMethods.Select(x => $"<a href='{Url.Action("Edit", "Payment", new { systemName = x.Key })}'>{x.Value.HtmlEncode()}</a>")))
-                        </div>
-                    }
-                    else
-                    {
-                        <div class="alert alert-warning">
-                            @Html.Raw(T("Admin.Configuration.Currencies.NoPaymentMethodsEnabledRounding", Url.Action("Providers", "Payment")))
-                        </div>
-                    }
+                <div class="adminRow">
+                    <div class="adminTitle">
+                    </div>
+                    <div class="adminData">
+                        @if (Model.RoundOrderTotalPaymentMethods.Any())
+                        {
+                            <div class="alert alert-info">
+                                <span>@T("Admin.Configuration.Currencies.PaymentMethodsEnabledRoundingList"):</span>
+                                @Html.Raw(string.Join(" · ", Model.RoundOrderTotalPaymentMethods.Select(x => $"<a href='{Url.Action("Edit", "Payment", new { systemName = x.Key })}'>{x.Value.HtmlEncode()}</a>")))
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="alert alert-warning">
+                                @Html.Raw(T("Admin.Configuration.Currencies.NoPaymentMethodsEnabledRounding", Url.Action("Providers", "Payment")))
+                            </div>
+                        }
+                    </div>
                 </div>
             </div>
         </div>
@@ -228,8 +264,8 @@
 
 <script sm-target-zone="scripts" data-origin="currency-edit">
     $(function () {
-        $('#@(Html.IdFor(x => x.RoundOrderTotalEnabled))').change(function () {
-            $('.round-order-total').toggle($(this).is(':checked'));
+        $('#@(Html.IdFor(x => x.RoundOrderItemsEnabled))').change(function () {
+            $('#round-order-items').toggle($(this).val().toLowerCase() === 'true');
         }).trigger('change');
 
         // Show custom formatting example.
