--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_misc.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_misc.scss
@@ -110,6 +110,89 @@
     vertical-align: middle;
 }
 
+.myaccount-page .cms-menu-listgroup .card,
+.myaccount-page .cms-menu-listgroup .card > .list-group:first-child {
+    border-start-start-radius: 0;
+    border-start-end-radius: 0;
+}
+
+.myaccount-header {
+    border: $card-border-width solid $card-border-color;
+    border-radius: $card-border-radius $card-border-radius 0 0;
+    padding: 0.75rem 1.25rem;
+    x-padding: 0.75rem;
+    margin-bottom: 0;
+    background-color: $card-cap-bg;
+    border-bottom: none;
+
+    .customer-avatar-lg {
+        width: 75px;
+        height: 75px;
+        display: block;
+
+        // TODO: We should apply this to avatar images in general.
+        .avatar-img {
+            background: #fff;
+            --border-radius: 50%;
+            --border-opacity: 1;
+            --border-radius-inner: var(--border-radius);
+            border-color: rgba(var(--light-rgb), var(--border-opacity)) !important;
+            border: var(--border-width) var(--border-style) var(--border-color) !important;
+            padding: 3px;
+        }
+    }
+
+    .avatar-letter {
+        font-size: 3rem;
+    }
+
+    .my-account-email,
+    .my-account-username {
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
+
+    .my-account-username {
+        font-weight: 600;
+        font-size: 1rem;
+    }
+
+    .my-account-email {
+        font-size: 0.875rem;
+        color: #6c757d;
+    }
+}
+
+@include media-breakpoint-down(xl) {
+    .myaccount-header .customer-avatar-lg {
+        width: 65px;
+        height: 65px;
+    }
+}
+
+@include media-breakpoint-down(lg) {
+    .myaccount-header {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+}
+
+@include media-breakpoint-down(sm) {
+    .myaccount-header {
+        flex-direction: initial;
+        text-align: start;
+    }
+}
+
+@include media-breakpoint-down(xs) {
+    .myaccount-header .customer-avatar-lg {
+        width: 55px;
+        height: 55px;
+    }
+}
+
 //
 // Other stuff
 // -------------------------------------------------
