--- a/src/Smartstore.Web/wwwroot/shared/_nav.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_nav.scss
@@ -79,7 +79,7 @@
 
 .nav-segmented {
     --nav-segmented-bg: var(--secondary);
-    --nav-segmented-border-radius: var(--border-radius-md);
+    --nav-segmented-border-radius: 50rem;
     --nav-segmented-padding: 4px;
     --nav-link-color: inherit;
     --nav-link-padding-y: 0.4rem;
@@ -88,6 +88,7 @@
     --nav-segmented-link-active-border-color: #{rgba($black, 0.15)};
     --nav-segmented-link-active-bg: #fff;
     --nav-segmented-link-active-shadow: #{0 1px 2px rgba($black, 0.08)};
+    --nav-segmented-link-border-radius: var(--nav-segmented-border-radius);
 
     background-color: var(--nav-segmented-bg);
     border-radius: var(--nav-segmented-border-radius);
@@ -97,7 +98,7 @@
     .nav-link {
         transition: none;
         border: 1px solid transparent;
-        @include border-radius(calc(var(--nav-segmented-border-radius) - 1px));
+        @include border-radius(var(--nav-segmented-link-border-radius));
 
         &:hover,
         &:focus {
