--- a/src/Smartstore.Web/Views/Shared/Layouts/_MyAccount.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Layouts/_MyAccount.cshtml
@@ -8,10 +8,14 @@
         <div class="row">
             <div class="col-md-4 col-lg-3 d-print-none">
                 <zone name="myaccount_menu_before" />
+                <div class="card my-account-menu">
+                    <div class="card-header">
+                        @await Component.InvokeAsync("MyAccountHeader")
+                    </div>
 
-                @await Component.InvokeAsync("MyAccountHeader")
-
-                <menu name="MyAccount" template="ListGroup" />
+                    <menu name="MyAccount" template="ListGroup" />
+                </div>
+                
                 <zone name="myaccount_menu_after" />
             </div>
             <div class="col-md-8 col-lg-9">
