--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_misc.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_misc.scss
@@ -82,6 +82,14 @@
         justify-content: center;
         font-weight: bold;
     }
+
+    &.avatar-circle {
+        .avatar-img {
+            border: 1px solid var(--border-color-translucent);
+            outline: 3px solid #fff;
+            outline-offset: -4px;
+        }
+    }
 }
 
 .customer-avatar {
@@ -120,12 +128,6 @@
         height: 64px;
         display: block;
         margin-right: 0.625rem;
-        // TODO: We should apply this to avatar images in general.
-        .avatar-img {
-            border: 1px solid var(--border-color-translucent);
-            outline: 3px solid #fff;
-            outline-offset: -4px;
-        }
     }
 
     .avatar-letter {
