--- a/src/Smartstore.Web/Views/Shared/Components/MyAccountHeader/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/MyAccountHeader/Default.cshtml
@@ -2,7 +2,7 @@
 
 @model MyAccountHeaderModel
 
-<div class="myaccount-header row no-gutters">
+<div class="myaccount-header row gx-2 gy-1">
     <div class="col-auto d-flex align-self-center justify-content-center">
         <partial name="Customer.Avatar" model="Model.Avatar" />
     </div>
