--- a/src/Smartstore.Web/Views/Shared/Layouts/_MyAccount.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Layouts/_MyAccount.cshtml
@@ -9,7 +9,7 @@
             <div class="col-md-4 col-lg-3 d-print-none">
                 <zone name="myaccount_menu_before" />
                 <div class="card my-account-menu">
-                    <div class="card-header">
+                    <div class="card-header p-2">
                         @await Component.InvokeAsync("MyAccountHeader")
                     </div>
 
